--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.0.0-beta.35",
+    "@babel/preset-env": "^7.0.0-beta.35",
+    "@babel/preset-react": "^7.0.0-beta.35",
+    "babel-loader": "^8.0.0-beta.0",
     "copy-webpack-plugin": "^4.3.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
