--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Markus Sjögren Englund",
   "license": "MIT",
   "dependencies": {
+    "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
